# rust-github-sample

./: Cargo.toml  LICENSE  README.md
src/: main.rs  shell.rs
src/github/: issues.rs  mod.rs  pulls.rs
