[package]
name = "rust-github-sample"
version = "0.1.0"
authors = ["konojunya <junya03dance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.8.11"
tokio = { version = "1.2.0", features = ["full"] }
